# ds-pre-proposta

./: .gitignore  LICENSE  MANIFEST.in  README.md  helpers.py  main.py  makefile  notas.txt  requirements-dev.txt  setup.cfg  setup.py
.kanbn/: index.md
.kanbn/tasks/: 01-setup-do-projeto.md  02-setup-do-aplicativo.md  03-adicionar-tarefas-no-backlog.md  04-setup-de-ferramentas.md  05-feature-cadastro.md  06-feature-cálculos.md  07-feature-relatório.md  08-feature-base-local.md  09-feature-base-remota.md  10-entrega-da-mvp.md  11-backend.md  12-frontend.md  13-deploy-de-produção.md  14-entregar-da-release.md  15-lançamento.md
doc/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  mkdocs.yml
doc/docs/: index.md
src/assets/data/: diffuse_means_RJ.dbf  direct_normal_means_RJ.dbf  global_horizontal_means_RJ.dbf  par_means_RJ.dbf  tilted_latitude_means_RJ.dbf
src/model/: cadastro.py
tests/: test_start.py
