[coverage:run]
branch = True
source = pre-proposta

[coverage:report]
fail_under = 65
precision = 1
show_missing = True
skip_covered = True

[isort]
combine_as_imports = True
force_grid_wrap = False
include_trailing_comma = True
line_length = 88
multi_line_output = 3
use_parentheses = True

[mypy]
ignore_missing_imports = True

[metadata]
name = pre-proposta
description = Geração de Pré-proposta para projetos de Energia Solar no formato PDF
long_description = file: README.md
long_description_content_type = text/markdown
author = Sérgio Pereira, Pereira Dev Analytics
author_email = sergiopereira.br@hotmail.com
url = https://github.com/sergioPereiraBR/ds-pre-proposta.git
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  License :: OSI Approved :: Pereira Dev License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.12
license = Pereira Dev

[options]
packages =
  pre-proposta
python_requires = >=3.12
setup_requires =
  setuptools_scm
  setuptools>=75.3.0

[options.entry_points]
console_scripts =
  pre-proposta = main:main